<resources>
    <string name="app_name">flixnet</string>
    <string name="email_input">Correo Electrónico</string>
    <string name="password_input">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>

    <string name="error_email_password" translatable="false">Los campos email y contraseña no puede ir vacios.</string>
    <string name="error_de_login" translatable="false">Email o contraseña incorrectos.</string>

    <string name="bienvenida" translatable="false">Bienvenido/a a la aplicación.</string>


    <string name="boton_salir" translatable="false">Salir</string>
    <string name="boton_perfil" translatable="false">Perfil</string>

    <string name="edit_menu" translatable="false">Editar</string>
    <string name="delete_menu" translatable="false">Borrar</string>
    
    <string name="name_input">Nombre</string>
    <string name="surname_input">Apellidos</string>
    <string name="username_input">Nombre de Usuario</string>
    <string name="repassword_input">Repita la contraseña</string>

    <string name="registro" translatable="false">Se ha registrado correctamente.</string>
    <string name="error_de_registro" translatable="false">No ha podido realizarse el registro.</string>

</resources>